kustomize/overlays/scots-lab/apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy@sha256:d8b3408c75d5ae78e03339af6103e7e6195e56573eea6f1ad34bb4dc4f44f340
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: ntfy-data
              mountPath: /var/lib/ntfy
            - name: ntfy-config
              mountPath: /etc/ntfy/server.yml
              subPath: server.yml
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi

      volumes:
        - name: ntfy-data
          persistentVolumeClaim:
            claimName: ntfy-data
        - name: ntfy-config
          configMap:
            name: ntfy-config
